--- a/views/createEvent.ejs
+++ b/views/createEvent.ejs
@@ -23,8 +23,19 @@
             <label for="description">Description:</label>
             <textarea id="description" name="description" rows="4"></textarea>
 
+            <label for="ticketPrices">Ticket Prices:</label>
+            <input type="number" id="ticketPrices" name="ticketPrices" placeholder="$" required>
+
+            <label for="Availability">Availability:</label>
+            <input type="number" id="Availability" name="Availability" required>
+
+            <label for="refundPolicy">Refund Policy:</label>
+            <input type="text" id="refundPolicy" name="refundPolicy" >
+
             <button id="Btn" type="submit">Add This Event</button>
             <a id="backBtn" href="/profile">Back</a>
         </form>
-        
+        <script src="/javascripts/createEvent.js">
+
+        </script>
     </div>
