--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,14 @@
   <body>
     <div class="background"></div>
     
-    <div class="login-page"></div>
-    <div class="form">
+    <div class="login-page">
+
+      <div class="login-header">
+        
+        <h3>Login to your account</h3>
+      </div>
+    </div>
+    <div class="form" id="form-container">
       <form class="login-form" action="/loggedin" method="post">
         <input type="text" name="username" placeholder="username"/>
         <input type="password" name="password" placeholder="password"/>
