--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,6 +1,9 @@
 @import 'https://fonts.googleapis.com/css?family=Montserrat|Open+Sans';
 .page{
-  background-color: #d0fed0;
+  background: #d0fed0;
+  background: url('../images/—Pngtree—green\ curves\ stock\ illustrations\ vectors_1461656.jpg') no-repeat ;
+  background-repeat: repeat-y;
+  background-size: 100%;
   z-index: 0;
 
 }
@@ -80,13 +83,14 @@
 }
 
 .details{
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 270px;
-  height: 400px;
-  background: rgb(247, 251, 245);
+  width: 290px;
+  height:auto;
+  background:linear-gradient(rgb(255, 255, 255),rgb(145, 252, 182));
   border-radius: 10px;
   margin: 20px;
   box-shadow: 0px 2px 0px 0px #DDDDDD;
@@ -96,10 +100,15 @@
   }
 }
 .deleteButton{
+  margin-bottom: 10px;
   padding: 10px;
-  background-color: #ec1e1e;
+  color: #b82323;
+  font-size: 15px;
+  background-color: #f5e3e3;
   border-radius: 10px;
+  border: 1px solid #b82323;
 }
 .deleteButton:hover{
   background-color: #b82323;
+  color: #FFFFFF;
 }
