--- a/views/eventCards.ejs
+++ b/views/eventCards.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Management</title>
   <link rel="stylesheet" href="/stylesheets/eventCards.css">
+  <link rel="stylesheet" href="/stylesheets/profile.css">
 </head>
 
 
@@ -18,10 +19,11 @@
     <header>
       <img src="https://bit.ly/1S35KpI">
     </header>
-    <div class="details">
+    <div class="details1">
       <h3 class='date'>THU, 2 JUN 9:00 AM</h3>
       <h1 class='title'>Vacation</h1>
-      <a href="/add1" class="AddButton">Book +</a>
+      <p class="refundPolicy">RefundPolicy: Non-refundable</p>
+      <!-- <a href="/add1" class="AddButton">Book +</a> -->
       <h2 class='venue'>Duke Hotel</h2>
       <h4 class='price'>$10 - $20</h4>
     </div>
@@ -35,10 +37,11 @@
     <header>
       <img src="https://bit.ly/1nJrU3h" />
     </header>
-    <div class="details">
+    <div class="details1">
       <h3 class='date'>THU, 4 FEB 7:00 AM</h3>
       <h1 class='title'>Conferance meeting</h1>
-      <a href="/add2" class="AddButton">Book +</a>
+      <p class="refundPolicy">RefundPolicy: Non-refundable</p>
+      <!-- <a href="/add2" class="AddButton">Book +</a> -->
       <h2 class='venue'>Theatre Lara</h2>
       <h4 class='price'>FREE</h4>
     </div>
@@ -51,10 +54,11 @@
     <header>
       <img src="https://bit.ly/1TGGVPH"  />
     </header>
-    <div class="details">
+    <div class="details1">
       <h3 class='date'>WED, 3 FEB 4</h3>
       <h1 class='title'>Marriage Event</h1>
-      <a href="/add3" class="AddButton">Book +</a>
+      <p class="refundPolicy">RefundPolicy: Non-refundable</p>
+      <!-- <a href="/add3" class="AddButton">Book +</a> -->
       <h2 class='venue'>Madrid Center</h2>
       <h4 class='price'>$55</h4>
     </div>
@@ -68,10 +72,11 @@
     <header>
       <img src="https://bit.ly/1SL0PIG" />
     </header>
-    <div class="details">
+    <div class="details1">
       <h3 class='date'>FRI, 6 FEB 5:00 PM</h3>
       <h1 class='title'>Party/Celebration</h1>
-      <a href="/add4" class="AddButton">Book +</a>
+      <p class="refundPolicy">RefundPolicy: Non-refundable</p>
+      <!-- <a href="/add4" class="AddButton">Book +</a> -->
       <h2 class='venue'>Big Top Stage</h2>
       <h4 class='price'>$7 - $12</h4>
     </div>
@@ -80,5 +85,30 @@
     </footer>
   </article>
 
+
+
+
+ <!----- Other User Created Events ------------->
+  <div class="container2">
+
+    <% 
+    events.forEach(function(event){%>
+
+      <div class="details">
+        <h1 class='title'><%= event.eventname%></h1>
+        <h3 class='date'>Date: <%= event.date%></h3>
+        <h2 class='venue'>location: <%= event.location%></h2>
+        <h4 class='description'>Description: <%= event.description%></h4>
+        <p class="ticketPrices">TicketPrices: <%= event.ticketPrices%>$</p>
+        <p class="Availability">Availability: <%= event.Availability%></p>
+        <p class="refundPolicy">RefundPolicy: <%= event.refundPolicy%></p>
+        <h4 class='createdBy'>Organizer: <%= event.createdBy%></h4>
+        <!-- <a href="/add?eventId=<%= event._id %>" class="AddButton">Book +</a> -->
+        <a href="/booking/<%= event._id %>" class="AddButton">Book +</a>
+      </div>
+      
+      <%  })%>
+
+  </div>
 
 </div>
