--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,10 @@
 
     <div class="login-header">
       <h2>Welcome to <span>Event Management</span></h2>
-      <p>Register your account</p>
+      <h4>Register your account</h4>
     </div>
 
-
-    <div class="form">
+    <div class="form" id="form-container">
       <form class="login-form" action="/register" method="post">
         <div class="input-group">
           <input type="text" name="username" placeholder="Username" required>
@@ -30,7 +29,7 @@
         </div>
 
         <div class="input-group">
-          <input type="password" name="password" placeholder="Password" required>
+          <input type="password" class="password" name="password" placeholder="Password" required>
         </div>
 
         <div class="input-group">
@@ -43,11 +42,7 @@
         </div>
         </form>
     </div>
-
     
   </div>
 </body>
-
-
-
 </html>
